--- a/priceCss.css
+++ b/priceCss.css
@@ -3,6 +3,7 @@ margin: 0px;
 padding: 0px;
 list-style: none;
 font-family: 'Roboto', sans-serif;
+box-sizing: border-box;
 }
 body{
     background-color: azure;
@@ -25,7 +26,7 @@ body{
     background-color: lightgrey;
     margin-top: 10%;
     margin-left: 20%;
-   
+   border: 0.5px solid;
 }
 
 .Firstheading {
